k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garbo
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - api.klimatkollen.se
        - beta.klimatkollen.se
      secretName: prod-klimatkollen-se-tls

  rules:
    - host: api.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
    - host: beta.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
